--- a/phase-6/server/.env
+++ b/phase-6/server/.env
@@ -1,7 +1,6 @@
 MONGODB_URI=mongodb+srv://BerryRide:BerryRide123@cluster0.jcsu6r1.mongodb.net
+JWT_SECRET=secret@2025
 
-JWT_SECRET = secret@2025
-
-IMAGEKIT_PRUBLIC_KEY =" public_9DD/pjx980K+GdfRFL1N3/PeYDo="
-IMAGEKIT_PRIVATE_KEY = "private_AMqSWH0TKp9cCRkqjMH+VxmpTDs="
-IMAGEKIT_URL_ENDPIONT = "https://ik.imagekit.io/v8qisvkly "
+IMAGEKIT_PUBLIC_KEY=public_9DD/pjx980K+GdfRFL1N3/PeYDo=
+IMAGEKIT_PRIVATE_KEY=private_AMqSWH0TKp9cCRkqjMH+VxmpTDs=
+IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/v8qisvkly
